# sukura

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
assets/: Withdraw.wasm
circuits/: MerkleTree.circom  Withdraw.circom  verification_key.json
contracts/: Verifier.sol
programs/sukura/: Cargo.toml
programs/sukura/src/: lib.rs  lol.rs  merkle_tree.rs  verifier.rs
programs/sukura/src/poseidon/: mod.rs
scripts/: circuit.sh
tests/: sukura.ts
utils/: generate_verifier.js  parse_proof_to_rust.js  parse_vk_to_rust.js
