[package]
name = "sukura"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sukura"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
ark-bn254 = "0.5.0"
ark-serialize = "0.5.0"
groth16-solana = "0.0.3"
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
serde_json = "1.0"
hex = "0.4.3"
