[package]
name = "sukura"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sukura"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
ark-bn254 = "0.5.0"
ark-serialize = "0.5.0"
groth16-solana = "0.0.3"
serde_json = "1.0"
hex = "0.4.3"
light-poseidon = "0.3.0"
ark-ff = "0.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
[patch.crates-io]
borsh = { version = "0.10.4" }
borsh-derive = { version = "1.5.5" }
